[package]
name = "provlint-core"
version.workspace = true
edition.workspace = true
description = "Core parsing and linting engine for Kickstart, AutoYaST, and Autoinstall files"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
quick-xml = { version = "0.36", features = ["serialize"] }
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
