[package]
name = "provlint-wasm"
version.workspace = true
edition.workspace = true
description = "WASM bindings for provlint"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
provlint-core = { path = "../provlint-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
